<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:text="@string/name_city"
        android:textSize="30sp"  />

    <TextView
        android:id="@+id/tv_information"
        android:textSize="30sp"
        android:text="@string/information"
        android:textColor="#673AB7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textColor="#E11C0D"
        android:paddingTop="20dp"
        android:textSize="35sp"
        android:paddingEnd="15dp"/>

    <TextView
        android:id="@+id/tv_yestyrday"
        android:text="@string/yesterday"
        android:textSize="20sp"
        android:paddingStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_quantity"
        android:text="@string/quantity"
        android:textSize="35sp"
        android:paddingEnd="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_steps_today"
            android:textSize="35sp"
            android:paddingTop="20dp"
            android:paddingEnd="38dp"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"/>

        <TextView
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"/>
</LinearLayout>


    <TextView
        android:id="@+id/tv_quantity_today"
        android:textSize="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:paddingEnd="25dp"/>






</LinearLayout>