<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8689BDE6">

    <TextView
        android:id="@+id/tv_weather"
        android:textSize="23sp"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_statistics"
        android:textSize="23sp"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/statistics"
        app:layout_constraintEnd_toEndOf="@+id/tv_start"
        app:layout_constraintStart_toStartOf="@+id/tv_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_start" />

    <TextView
        android:id="@+id/tv_cities"
        android:textSize="23sp"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/cities"
        app:layout_constraintEnd_toEndOf="@+id/tv_weather"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather" />
</androidx.constraintlayout.widget.ConstraintLayout>